force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wall Builder Summary Metrics</relationshipLabel>
    <relationshipName>Wall_Builder_Summary_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>