force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Common_Errors__c.field-meta.xml
<CustomField>
    <fullName>Common_Errors__c</fullName>
    <label>Common Errors</label>
    <type>TextArea</type>
</CustomField>