force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Largest_Wall_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Largest_Wall_User_Count__c</fullName>
    <label>Largest Wall User Count</label>
    <type>TextArea</type>
</CustomField>