force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Module_Status__c.field-meta.xml
<CustomField>
    <fullName>Module_Status__c</fullName>
    <label>Module Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>