force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Objects_Affected_By_Walls__c.field-meta.xml
<CustomField>
    <fullName>Objects_Affected_By_Walls__c</fullName>
    <label>Objects Affected By Walls</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>