force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Order_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Header</label>
    <referenceTo>Order_Header__c</referenceTo>
    <relationshipLabel>Wall Builder Summary Metrics</relationshipLabel>
    <relationshipName>Wall_Builder_Summary_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>