force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Warning_Count__c.field-meta.xml
<CustomField>
    <fullName>Warning_Count__c</fullName>
    <label>Warning Count</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>